# excelipy

./: .gitignore  README.md  pyproject.toml  taskfile.yml
.github/workflows/: coverage.yml  publish.yml
excelipy/: __init__.py  const.py  main.py  models.py  service.py  style.py
excelipy/resources/: AI.md
excelipy/writers/: fill.py  image.py  link.py  table.py  text.py
test/: ai_scratch.py  examples.py  test_api.py  test_component_groups.py
test/resources/output/xlsx_output/: basic_column_formatting.xlsx  conditional_formatting.xlsx
tests/: examples.py  test_api.py  test_component_groups.py  test_fmt_conversion.py
tests/resources/output/xlsx_output/: adding_a_title.xlsx  auto_size_0.xlsx  auto_size_1.xlsx  auto_size_2.xlsx  category_coloring.xlsx  displaying_a_table.xlsx  formatting_dates.xlsx  merging_columns.xlsx
