[project]
name = "excelipy"
version = "1.1.14"
description = "Wrapper around xlsxwriter to improve usability"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "pillow>=11.3.0",
    "pydantic>=2.11.3",
    "xlsxwriter>=3.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=4.1.0",
    "coverage>=7.6.1",
    "pytest-mock>=3.14.0",
    "debugpy>=1.8.13",
    "pyarrow>=21.0.0",
    "excel2img>=1.4.0; sys_platform == 'win32'",
    "duckdb>=1.4.3",
    "matplotlib>=3.9.4",
    "ruff>=0.15.12",
    "ty>=0.0.39",
]

[tool.setuptools]
packages = ["excelipy"]

[tool.setuptools.package-data]
excelipy = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=excelipy --cov-report=xml --cov-report=term-missing"
testpaths = ["tests", "excelipy"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]

[tool.coverage.run]
omit = ["*/temp/*"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
